logs/dag_id=fill_data_v9/run_id=scheduled__2024-04-28T000000+0000/task_id=raw/attempt=1.log
[2024-04-29T17:03:25.509+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-04-29T17:03:25.635+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: fill_data_v9.raw scheduled__2024-04-28T00:00:00+00:00 [queued]>
[2024-04-29T17:03:25.642+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: fill_data_v9.raw scheduled__2024-04-28T00:00:00+00:00 [queued]>
[2024-04-29T17:03:25.644+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 6
[2024-04-29T17:03:25.654+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): raw> on 2024-04-28 00:00:00+00:00
[2024-04-29T17:03:25.660+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'fill_data_v9', 'raw', 'scheduled__2024-04-28T00:00:00+00:00', '--job-id', '11', '--raw', '--subdir', 'DAGS_FOLDER/dag_raw_processed.py', '--cfg-path', '/tmp/tmpow_xg2h0']
[2024-04-29T17:03:25.661+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=838) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-04-29T17:03:25.662+0000] {standard_task_runner.py:91} INFO - Job 11: Subtask raw
[2024-04-29T17:03:25.663+0000] {standard_task_runner.py:63} INFO - Started process 840 to run task
[2024-04-29T17:03:25.697+0000] {task_command.py:426} INFO - Running <TaskInstance: fill_data_v9.raw scheduled__2024-04-28T00:00:00+00:00 [running]> on host 15fcc90b2790
[2024-04-29T17:03:25.755+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='mosula' AIRFLOW_CTX_DAG_ID='fill_data_v9' AIRFLOW_CTX_TASK_ID='raw' AIRFLOW_CTX_EXECUTION_DATE='2024-04-28T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-04-28T00:00:00+00:00'
[2024-04-29T17:03:25.756+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-04-29T17:03:25.766+0000] {logging_mixin.py:188} INFO - ['dags', 'logs', '***.cfg', 'data']
[2024-04-29T17:03:25.827+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-04-29T17:03:25.827+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/dag_raw_processed.py", line 35, in fill_raw
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "@"
LINE 2:             INSERT INTO churn_raw@churn (customer_id, gender...
                                         ^

[2024-04-29T17:03:25.843+0000] {taskinstance.py:1205} INFO - Marking task as UP_FOR_RETRY. dag_id=fill_data_v9, task_id=raw, execution_date=20240428T000000, start_date=20240429T170325, end_date=20240429T170325
[2024-04-29T17:03:25.862+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 11 for task raw (syntax error at or near "@"
LINE 2:             INSERT INTO churn_raw@churn (customer_id, gender...
                                         ^
; 840)
[2024-04-29T17:03:25.878+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-04-29T17:03:25.904+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-04-29T17:03:25.908+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
